# The-translation

./: .clang-format  .git-blame-ignore-revs  .gitignore  CMakeLists.txt  README.md  docker-compose.yml  eol-sensor-holder.FCStd  platformio.ini  sdkconfig
.github/workflows/: formatting.yml  platformio.yml  wiki.yml
docs/: .gitignore  README.md  update.sh
dolibarr/: mysql-dump.sql
include/: ActiveModule.hpp  Arduino.h  Buttons.hpp  Conveyor.hpp  DolibarrClient.hpp  EolSensor.hpp  GoPlus2.h  Hardware.hpp  Logger.hpp  MFRC522_I2C.h  MaintenanceMode.hpp  Modes.hpp  NonBlockingGRBL.hpp  OperationMode.hpp  Sorter.hpp  TagReader.hpp  TaskContext.hpp  TheTranslationConfig.hpp  WebConfigurator.hpp  Wire.h  conveyor.hpp  http_client.hpp  lcdScreen.hpp  taskUtil.hpp
include/production/: ProductionValues.hpp  SharedValues.hpp
include/simulation/: Button.hpp  HardwareSerial.hpp  M5Power.hpp  MFRC522_I2C.hpp  Print.hpp  SimulationMessage.hpp  SimulationServer.hpp  String.hpp  WebConfig.hpp  WebServer.hpp
include/utility/: Button.h
lib/GoPlus2/: README.md
lib/GoPlus2/src/: GoPlus2.cpp  GoPlus2.h
lib/SimControl/include/: SimProcess.hpp
lib/SimControl/include/sim/: Client.hpp  ClientThread.hpp  Configuration.hpp  Controller.hpp  ControllerThread.hpp  HardwareState.hpp  HttpProxy.hpp  Message.hpp  WiFiEnums.hpp
lib/SimControl/src/: Client.cpp  ClientThread.cpp  Configuration.cpp  Controller.cpp  ControllerThread.cpp  HttpProxy.cpp  SimProcess.cpp
lib/Simulation/: CMakeLists.txt
lib/Simulation/include/: HCSR04.h  HTTPClient.h  M5Stack.h  WebConfig.h  WiFi.h
lib/Simulation/include/simulation/: Arduino.hpp  Button.hpp  GoPlus2.hpp  HCSR04.hpp  HTTPClient.hpp  HardwareSerial.hpp  M5Display.hpp  M5Stack.hpp  MFRC522_I2C.hpp  NonBlockingGRBL.hpp  Print.hpp  SimulationMessage.hpp  SimulationServer.hpp  String.hpp  TheTranslationConfig.hpp  WebConfig.hpp  WebServer.hpp  WiFi.hpp  Wire.hpp  taskUtil.hpp
lib/Simulation/src/: Button.cpp  GoPlus2.cpp  HCSR04.cpp  HTTPClient.cpp  HardwareSerial.cpp  M5Display.cpp  M5Power.cpp  M5Stack.cpp  MFRC522_I2C.cpp  NonBlockingGRBL.cpp  SimulationServer.cpp  WebConfig.cpp  WebServer.cpp  WiFi.cpp  Wire.cpp  esp_main.cpp  simulation.cpp  watchdog.cpp
scripts/: format.sh  run-tests.sh
simulation-client/: CMakeLists.txt  README.md
simulation-client/src/: CMakeLists.txt  Configuration.cpp  Configuration.hpp  HttpProxy.cpp  HttpProxy.hpp  SimulationClient.cpp  SimulationClient.hpp  SimulationMessage.hpp  Status.hpp  WiFiEnums.hpp  gui.cpp  main.cpp
simulator-gui/: CMakeLists.txt  README.md
simulator-gui/src/: CMakeLists.txt  Dimensions.hpp  gui.cpp  main.cpp
src/: Buttons.cpp  CMakeLists.txt  Conveyor.cpp  DolibarrClient.cpp  EolSensor.cpp  Hardware.cpp  MaintenanceMode.cpp  Modes.cpp  NonBlockingGRBL.cpp  Sorter.cpp  TagReader.cpp  TaskContext.cpp  WebConfigurator.cpp  configuration.cpp  conveyor.cpp  conveyor.hpp  lcdScreen.cpp  main.cpp  maintenance.cpp  production.cpp  taskUtil.cpp
src/simulation/: Arduino.cpp  GoPlus2.cpp  HardwareSerial.cpp  NonBlockingGRBL.cpp  Print.cpp  SimulationServer.cpp  WebConfig.cpp
support_server/: index.js  package-lock.json  package.json
test/: test_main.cpp  test_spawn.cpp
